# fluence-libvips

./: .gitmodules  CMakeLists.txt
frontend/: .gitignore  package.json  tsconfig.json  webpack.config.js
frontend/src/: index.js
src/: fluence_libvips.c  main.c
test/: .gitignore  CMakeLists.txt  fluence_libvips_test  test.c  test.sh
test/data/: hello.in.json  hello.out.json
